Fix squashed menu items in Safari

--- a/randepisode/static/css/style.css
+++ b/randepisode/static/css/style.css
@@ -23,6 +23,10 @@ body {
     max-height: 250px;
 }
 
+.ac-result {
+    min-height: 60px;
+}
+
 .deselect {
     top: 0px;
     right: 5px;
